--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build --turbopack",
+    "dev": "next dev",
+    "build": "next build",
     "start": "next start",
     "postbuild": "next-sitemap"
   },
@@ -22,11 +22,11 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.21",
     "lucide-react": "^0.544.0",
-    "next": "15.5.4",
+    "next": "14.2.4",
     "next-seo": "^6.8.0",
     "next-sitemap": "^4.2.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "resend": "^6.1.0",
     "tailwind-merge": "^3.3.1",
     "uuid": "^13.0.0"
@@ -36,5 +36,8 @@
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7"
+  },
+  "engines": {
+    "node": ">=18.0.0"
+    }
   }
-}
