--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.15",
     "@supabase/supabase-js": "^2.58.0",
+    "@vercel/speed-insights": "^1.2.0",
     "axios": "^1.12.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -39,5 +40,5 @@
   },
   "engines": {
     "node": ">=18.0.0"
-    }
   }
+}
