Add complete SEO optimization

--- a/.env.local
+++ b/.env.local
@@ -4,3 +4,6 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzd
 NEXT_PUBLIC_ADMIN_EMAIL=cooper@dronecareerpro.com
 
 RESEND_API_KEY=re_hbGJ4hrN_7aNe4dJysDzCXdtAy9n9s2Jh
+VOICEFLOW_API_KEY=VF.DM.68ef1a8fb99b56cf21633d45.rqi2lbX9dzyvvtQS
+VOICEFLOW_PROJECT_ID=68eef99dc61fad3a0dc45364
+VOICEFLOW_VERSION_ID=68eef99dc61fad3a0dc45365
