--- a/.env.local
+++ b/.env.local
@@ -4,6 +4,6 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzd
 NEXT_PUBLIC_ADMIN_EMAIL=cooper@dronecareerpro.com
 
 RESEND_API_KEY=re_hbGJ4hrN_7aNe4dJysDzCXdtAy9n9s2Jh
-VOICEFLOW_API_KEY=VF.DM.68ef1a8fb99b56cf21633d45.rqi2lbX9dzyvvtQS
-VOICEFLOW_PROJECT_ID=68eef99dc61fad3a0dc45364
-VOICEFLOW_VERSION_ID=68eef99dc61fad3a0dc45365
+VOICEFLOW_API_KEY=VF.DM.69004f52f9a8be2adab3407e.ccik3xnzyMG8VaUh
+VOICEFLOW_PROJECT_ID=68ff12c2fab11e098f3328e2
+VOICEFLOW_VERSION_ID=68ff12c2fab11e098f3328e3
